--- a/jQuery/indexJQ.html
+++ b/jQuery/indexJQ.html
@@ -3,14 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>jQuery</title>
 </head>
 <body>
-
-
-
+  <input>
 
   <script src="https://code.jquery.com/jquery-3.7.0.js" integrity="sha256-JlqSTELeR4TLqP0OG9dxM7yDPqX1ox/HfgiSLBj8+kM=" crossorigin="anonymous"></script>
-  <script src="appJQ.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
