--- a/DOM/indexDOM.html
+++ b/DOM/indexDOM.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DOM</title>
+  <script src="appDOM.js"></script>
 </head>
 <body>
-  <input>
+  <input type="text" name="textBox" id="messageInput" placeholder="Enter your message">
+  <button id="showButton" type="button">Click</button>
+
 
 
 </body>
