--- a/DOM/indexDOM.html
+++ b/DOM/indexDOM.html
@@ -10,6 +10,10 @@
   <input type="text" name="textBox" id="messageInput" placeholder="Enter your message">
   <button id="showButton" type="button">Click</button>
 
+  <div id="colorChangeDiv" style="width: 200px; height: 200px;">
+    Hover over me
+  </div>
+
 
 
 </body>
