--- a/DOM/indexDOM.html
+++ b/DOM/indexDOM.html
@@ -14,6 +14,16 @@
     Hover over me
   </div>
 
+  <p id="colorChangeParagraph">
+    This is a paragraph that will change color when you hover over it.
+  </p>
+
+  <button id="addSpanButton">Add Span</button>
+    <div id="emptyDiv"></div>
+
+    <button id="addFriendsButton">Add Friends</button>
+    <ul id="friendsList"></ul>
+
 
 
 </body>
